# ConfluentKafkaConnectAzureEventHubs

./: pyproject.toml
connectazureeventhubswithconfluentkafka/: apache_kafka_c.py  apache_kafka_p.py  consumer.py  event_hubs_c.py  event_hubs_p.py
